# GoFaster

./: CMP-5010B_CourseworkAssignment2021.docx  CMakeLists.txt  Car.cpp  Car.h  Circle.cpp  Circle.h  FreeImage.h  FreeType.cpp  FreeType.h  ImageLoading.cpp  ImageLoading.h  Marker.cpp  Marker.h  OBB.h  README.md  Sprite.cpp  Sprite.h  Square.cpp  Square.h  Wall.cpp  Wall.h  main.cpp
GL/: wglew.h
shaders/: Shader.cpp  Shader.h
